--- a/src/components/profileEditPopup/ProfileEditPopup.module.scss
+++ b/src/components/profileEditPopup/ProfileEditPopup.module.scss
@@ -39,10 +39,15 @@
   align-items: center;
   width: 100%;
   margin-bottom: 15px;
+  position: relative;
+  padding-top: 10px;
 }
 
 .closeButton {
   position: absolute;
+  margin-top: 0;
+  margin-right: -20px;
+  top: 0;
   right: 0;
   background: none;
   border: none;
@@ -54,7 +59,8 @@
 
 .closeButton:hover {
   color: #222;
-  transform: scale(1.1);
+  transform: scale(1.3);
+  background: none;
 }
 
 .title {
@@ -82,8 +88,24 @@
 .uploading {
   display: flex;
   justify-content: center;
-  margin-right: 35px;
+  align-items: center;
+  gap: 12px;
   margin-top: 10px;
+  margin-right: 30px;
+}
+
+.avatarWrapper {
+  position: relative;
+  width: 120px;
+  height: 120px;
+}
+
+.avatar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid #ddd;
 }
 
 .avatarLabel {
@@ -92,6 +114,17 @@
   color: #0078be;
   font-weight: bold;
   text-decoration: underline;
+}
+
+.avatarLabel,
+.removeButton {
+  transition: transform 0.2s ease;
+}
+
+.avatarLabel:hover,
+.removeButton:hover {
+  transform: scale(1.05);
+  background: none;
 }
 
 .hiddenInput {
@@ -118,6 +151,14 @@
   gap: 8px;
 }
 
+.inputWrapper input{
+  margin-left: 0;
+}
+
+.inputWrapper label, .textareaLabel {
+  margin-left: 0;
+}
+
 .input,
 .select {
   width: 100%;
@@ -126,9 +167,19 @@
   font-size: 16px;
   border: none;
   background: white;
-  box-shadow: 0px 4px 8px rgba(73, 194, 167, 0.4);
+  box-shadow: 0 4px 6px #99DDD0;
   outline: none;
   transition: all 0.3s ease;
+}
+
+.inputError {
+  border: 2px solid red;
+  box-shadow: 0 0 4px rgba(255, 0, 0, 0.6);
+}
+
+.errorText {
+  color: red;
+  font-size: 14px;
 }
 
 .select {
@@ -136,6 +187,10 @@
   cursor: pointer;
   background: white url("data:image/svg+xml;charset=UTF-8,%3Csvg viewBox='0 0 24 24' width='24' height='24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='gray' d='M7 10l5 5 5-5z'/%3E%3C/svg%3E") no-repeat right 12px center;
   background-size: 20px;
+}
+
+.inputWrapper select {
+  border-radius: 30px;
 }
 
 .readonlyInput {
