--- a/src/components/createPublicationPopup/createPublicationPopup.module.scss
+++ b/src/components/createPublicationPopup/createPublicationPopup.module.scss
@@ -18,6 +18,10 @@
   text-align: center;
   max-width: 400px;
   width: 80%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center; // ⬅ Центровка по горизонтали
 }
 
 button {
