--- a/src/components/loginForm/loginForm.module.scss
+++ b/src/components/loginForm/loginForm.module.scss
@@ -37,6 +37,8 @@
 .error {
     color: red;
     font-size: 14px;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 .divider {
@@ -61,4 +63,25 @@
 
 .text {
   white-space: nowrap;
+}
+
+.passwordWrapper {
+  position: relative;
+  width: 100%;
+}
+
+.eyeIcon {
+  position: absolute;
+  top: 40%;
+  right: 20px;
+  transform: translateY(-55%);
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  pointer-events: auto;
+  z-index: 2;
+
+  &:hover {
+    fill: #000;
+  }
 }
