--- a/src/pages/aboutUs/aboutUs.module.scss
+++ b/src/pages/aboutUs/aboutUs.module.scss
@@ -14,6 +14,7 @@
   padding-left: 50px;
   max-width: 100%;
   overflow: hidden;
+  height: 70vh;
 }
 
 .heroText {
@@ -214,7 +215,7 @@
   border-radius: 12px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  min-width: 200px;
+  min-width: 180px;
   text-align: center;
   display: flex;
   flex-direction: column;
