--- a/src/pages/categoryPage/categoryPage.module.scss
+++ b/src/pages/categoryPage/categoryPage.module.scss
@@ -37,15 +37,15 @@
 }
 
 .categoryWrapper {
-  display: grid;
+  display: flex;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px; /* 69px по вертикали, 68px по горизонтали */
-  justify-content: center; /* Центрируем карточки */
-  margin: 69px auto; /* Отступы сверху и снизу */
-  padding: 20px;
+  gap: 20px;
+  justify-content: center;
+  margin: 69px auto;
   position: relative;
   width: 100%;
   max-width: 800px;
+  flex-wrap: wrap;
 }
 
 .categoryCard {
@@ -60,48 +60,42 @@
   font-weight: bold;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
   transition: transform 0.3s, box-shadow 0.3s;
+  width: 200px;
 
   &:hover {
     transform: translateY(-5px);
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
   }
 }
+//
+//@media (max-width: 960px) {
+//  .categoryWrapper {
+//    grid-template-columns: repeat(2, 1fr); /* Переход на 2 колонки */
+//    justify-content: center; /* Центрируем карточки */
+//  }
+//}
+//@media (max-width: 425px) {
+//  .categoryWrapper {
+//    grid-template-columns: 1fr; /* Одна колонка */
+//    justify-content: center;
+//    padding: 0 20px; /* Уменьшенный отступ */
+//  }
+//}
+//
+//@media (max-width: 375px) {
+//  .categoryWrapper {
+//    grid-template-columns: 1fr; /* Одна колонка */
+//    padding: 0 15px;
+//  }
+//}
+//
+//@media (max-width: 320px) {
+//  .categoryWrapper {
+//    grid-template-columns: 1fr; /* Одна колонка */
+//    padding: 0 10px;
+//  }
+//}
 
-@media (max-width: 960px) {
-  .categoryWrapper {
-    grid-template-columns: repeat(2, 1fr); /* Переход на 2 колонки */
-    justify-content: center; /* Центрируем карточки */
-  }
-}
-@media (max-width: 720px) {
-  .categoryWrapper {
-    grid-template-columns: repeat(2, 1fr); /* Переход на 2 колонки */
-  }
-}
-
-@media (max-width: 425px) {
-  .categoryWrapper {
-    grid-template-columns: repeat(2, 1fr); /* Две колонки */
-    justify-content: center; /* Центрируем карточки */
-    padding: 0 90px; /* Отступы от краёв экрана */
-  }
-}
-
-@media (max-width: 375px) {
-  .categoryWrapper {
-    grid-template-columns: repeat(2, 1fr); /* Две колонки */
-    justify-content: center; /* Центрируем карточки */
-    padding: 0 120px; /* Отступы от краёв экрана */
-  }
-}
-
-@media (max-width: 320px) {
-  .categoryWrapper {
-    grid-template-columns: repeat(2, 1fr); /* Две колонки */
-    justify-content: center; /* Центрируем карточки */
-    padding: 0 160px; /* Отступы от краёв экрана */
-  }
-}
 .categoryCard:hover {
   transform: translateY(-5px);
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); /* Увеличение тени при наведении */
@@ -130,3 +124,4 @@
   text-align: center;
   margin: 0;
 }
+
