--- a/src/shared/ui/header/style.module.scss
+++ b/src/shared/ui/header/style.module.scss
@@ -122,11 +122,11 @@
         align-items: center;
         gap: 8px;
         transition: background-color 0.2s, color 0.2s;
-
+        margin-top: 5px;
         &::after {
             content: '▼';
             font-size: 17px;
-            margin-left: -1vw;
+            margin-left: -0.5vw; // ✅ стандартный отступ
             color: #fff;
         }
 
