--- a/src/components/bannerWithStatistics/styles.module.scss
+++ b/src/components/bannerWithStatistics/styles.module.scss
@@ -3,9 +3,12 @@
   margin: 20px;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  width: 400px;
+  width: 40%;
+  min-width: 400px;
+
   @media (max-width: 768px) {
     width: 100%;
+    margin: 0;
   }
 }
 
