--- a/src/components/donationsPopup/donationPopup.module.scss
+++ b/src/components/donationsPopup/donationPopup.module.scss
@@ -1,11 +1,11 @@
 .overlay {
-  position: fixed;
-  inset: 0;
+  position: fixed !important;
+  inset: 0 !important;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 100;
+  z-index: 9999 !important;
 }
 
 .popup {
