--- a/src/components/publicationList/styles.module.scss
+++ b/src/components/publicationList/styles.module.scss
@@ -18,6 +18,10 @@
 h2 {
     font-size: 30px;
     font-weight: bold;
+    @media (max-width: 768px) {
+        font-size: 20px;
+        font-weight: normal;
+    }
 }
 
 .viewAll {
@@ -25,6 +29,12 @@ h2 {
     text-decoration: none;
     font-size: 25px;
     margin-right: 1rem;
+    @media (max-width: 768px) {
+        font-size: 15px;
+        margin-right: 0.5rem;
+        margin-top: 0.5rem;
+
+    }
 }
 
 .cardWrapper {
@@ -57,5 +67,13 @@ h2 {
     &:disabled {
         opacity: 0.3;
         cursor: not-allowed;
+    }
+    @media (max-width: 768px) {
+        padding: 4px;
+
+        svg {
+            width: 16px;
+            height: 16px;
+        }
     }
 }
