--- a/src/pages/notificationPage/notificationPage.module.scss
+++ b/src/pages/notificationPage/notificationPage.module.scss
@@ -185,3 +185,15 @@ html, body, #root {
   width: 100%;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
+.showAllContainer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.showAllBtn {
+  @extend .tab;
+  font-size: 14px;
+  font-weight: 500;
+  width: auto;
+  padding: 10px 16px;
+}
