--- a/src/shared/ui/header/style.module.scss
+++ b/src/shared/ui/header/style.module.scss
@@ -1,228 +1,228 @@
-.header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 5px 10px;
-    background-color: #76D0C2;
-    position: relative;
-    z-index: 5;
-
-    @media (max-width: 768px) {
-        width: 100vw;
-        min-width: 100%;
-        padding: 5px 8px;
-    }
-}
-
-
-.nav {
-    margin-left: 1.5rem;
-    flex-grow: 1;
-    display: flex;
-    align-items: center;
-    gap: 32px;
-
-    @media(max-width: 768px) {
-        margin-left: 0;
-        gap: 15px;
-        justify-content: space-evenly;
-    }
-}
-
-.navLink {
-    font-size: 20px;
-    text-decoration: none;
-    transition: color 0.2s;
-    color: white;
-
-    display: flex;
-    align-items: center;
-}
-
-.authLink {
-    color: white;
-    margin-left: auto;
-    font-size: 20px;
-    margin-right: 3%;
-    text-decoration: none;
-    transition: color 0.2s;
-    display: flex;
-    align-items: center;
-}
-
-.userMenu {
-    position: relative;
-    display: flex;
-    align-items: center;
-    //margin-left: 10px;
-}
-
-.userMenuButton {
-    background: none;
-    border: none;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    margin-top: 0;
-
-    svg {
-        width: 40px;
-        height: 40px;
-
-        @media (max-width: 768px) {
-            width: 30px;
-            height: 30px;
-        }
-    }
-}
-
-.dropdownMenu {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background: #C4EBE4;
-    border: 1px solid #ddd;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    min-width: 200px;
-    display: flex;
-    flex-direction: column;
-}
-
-.dropdownItem {
-    font-size: 16px;
-    display: flex;
-    align-items: center;
-    padding: 10px 0px 10px 10px;
-    text-decoration: none;
-    color: #333;
-    transition: background-color 0.2s;
-
-    &:hover {
-        background-color: #f5f5f5;
-        cursor: pointer;
-    }
-
-    svg {
-        margin-right: 10px;
-        transition: fill 0.2s;
-        flex-shrink: 0;
-    }
-}
-
-.notificationWrapper {
-    position: relative;
-    display: flex;
-    align-items: center;
-
-    svg {
-        margin-right: 10px;
-        flex-shrink: 0;
-        display: block;
-    }
-}
-
-.unreadDot {
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    width: 9px;
-    height: 9px;
-    background-color: red;
-    border-radius: 50%;
-    box-shadow: 0 0 0 2px #C4EBE4; // немного отступа, чтобы кружок красиво смотрелся поверх иконки
-}
-
-.logoutItem {
-    border-radius: 15px;
-    border: none;
-    font-size: 16px;
-    padding: 10px 0px 10px 10px;
-    background-color: #C4EBE4;
-    color: #d9534f;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    text-decoration: none;
-    transition: background-color 0.2s, color 0.2s;
-
-    &:hover {
-        background-color: #f5f5f5;
-        cursor: pointer;
-    }
-
-    svg {
-        margin-right: 10px;
-        transition: fill 0.2s;
-        flex-shrink: 0;
-    }
-}
-
-.languageSwitcher {
-    position: relative;
-    display: flex;
-    align-items: center;
-    margin-left: 15px;
-
-    .currentLanguage {
-        background-color: transparent;
-        margin-top: 0;
-        font-size: 18px;
-        padding: 8px;
-        border: none;
-        cursor: pointer;
-        color: #fff;
+    .header {
         display: flex;
         align-items: center;
-        gap: 6px;
+        justify-content: space-between;
+        padding: 5px 10px;
+        background-color: #76D0C2;
+        position: relative;
+        z-index: 5;
 
-        &::after {
-            content: '▼';
-            font-size: 14px;
-            color: #fff;
-        }
-
-        &:hover {
-            color: #00a99d;
+        @media (max-width: 768px) {
+            width: 100vw;
+            min-width: 100%;
+            padding: 5px 8px;
         }
     }
 
-    .languageMenu {
+
+    .nav {
+        margin-left: 1.5rem;
+        flex-grow: 1;
+        display: flex;
+        align-items: center;
+        gap: 32px;
+
+        @media(max-width: 768px) {
+            margin-left: 0;
+            gap: 15px;
+            justify-content: space-evenly;
+        }
+    }
+
+    .navLink {
+        font-size: 20px;
+        text-decoration: none;
+        transition: color 0.2s;
+        color: white;
+
+        display: flex;
+        align-items: center;
+    }
+
+    .authLink {
+        color: white;
+        margin-left: auto;
+        font-size: 20px;
+        margin-right: 3%;
+        text-decoration: none;
+        transition: color 0.2s;
+        display: flex;
+        align-items: center;
+    }
+
+    .userMenu {
+        position: relative;
+        display: flex;
+        align-items: center;
+        //margin-left: 10px;
+    }
+
+    .userMenuButton {
+        background: none;
+        border: none;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        margin-top: 0;
+
+        svg {
+            width: 40px;
+            height: 40px;
+
+            @media (max-width: 768px) {
+                width: 30px;
+                height: 30px;
+            }
+        }
+    }
+
+    .dropdownMenu {
         position: absolute;
         top: 100%;
         right: 0;
-        background-color: #C4EBE4;
-        border-radius: 8px;
-        padding: 10px 0;
-        min-width: 120px;
+        background: #C4EBE4;
+        border: 1px solid #ddd;
+        border-radius: 15px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        z-index: 10;
+        min-width: 200px;
+        display: flex;
+        flex-direction: column;
+    }
 
-        .languageOption {
-            padding: 8px 16px;
-            font-size: 16px;
-            color: #333;
+    .dropdownItem {
+        font-size: 16px;
+        display: flex;
+        align-items: center;
+        padding: 10px 0px 10px 10px;
+        text-decoration: none;
+        color: #333;
+        transition: background-color 0.2s;
+
+        &:hover {
+            background-color: #f5f5f5;
             cursor: pointer;
+        }
+
+        svg {
+            margin-right: 10px;
+            transition: fill 0.2s;
+            flex-shrink: 0;
+        }
+    }
+
+    .notificationWrapper {
+        position: relative;
+        display: flex;
+        align-items: center;
+
+        svg {
+            margin-right: 10px;
+            flex-shrink: 0;
+            display: block;
+        }
+    }
+
+    .unreadDot {
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        width: 9px;
+        height: 9px;
+        background-color: #4caf50;
+        border-radius: 50%;
+        box-shadow: 0 0 0 2px #C4EBE4; // немного отступа, чтобы кружок красиво смотрелся поверх иконки
+    }
+
+    .logoutItem {
+        border-radius: 15px;
+        border: none;
+        font-size: 16px;
+        padding: 10px 0px 10px 10px;
+        background-color: #C4EBE4;
+        color: #d9534f;
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        text-decoration: none;
+        transition: background-color 0.2s, color 0.2s;
+
+        &:hover {
+            background-color: #f5f5f5;
+            cursor: pointer;
+        }
+
+        svg {
+            margin-right: 10px;
+            transition: fill 0.2s;
+            flex-shrink: 0;
+        }
+    }
+
+    .languageSwitcher {
+        position: relative;
+        display: flex;
+        align-items: center;
+        margin-left: 15px;
+
+        .currentLanguage {
+            background-color: transparent;
+            margin-top: 0;
+            font-size: 18px;
+            padding: 8px;
+            border: none;
+            cursor: pointer;
+            color: #fff;
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            gap: 6px;
 
-            &:hover {
-                background-color: #76D0C2;
+            &::after {
+                content: '▼';
+                font-size: 14px;
                 color: #fff;
             }
 
-            &.active {
-                font-weight: bold;
+            &:hover {
                 color: #00a99d;
+            }
+        }
 
-                &::after {
-                    content: '✔';
-                    font-size: 12px;
-                    margin-left: auto;
+        .languageMenu {
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background-color: #C4EBE4;
+            border-radius: 8px;
+            padding: 10px 0;
+            min-width: 120px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 10;
+
+            .languageOption {
+                padding: 8px 16px;
+                font-size: 16px;
+                color: #333;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                &:hover {
+                    background-color: #76D0C2;
+                    color: #fff;
+                }
+
+                &.active {
+                    font-weight: bold;
+                    color: #00a99d;
+
+                    &::after {
+                        content: '✔';
+                        font-size: 12px;
+                        margin-left: auto;
+                    }
                 }
             }
         }
     }
-}
